# src/main/java/codes/thischwa/ddauto/MainApiRoutes.java
@@ -1,5 +1,13 @@
 package codes.thischwa.ddauto;
 
+import javax.servlet.http.HttpServletRequest;
+
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestParam;
+
 import codes.thischwa.ddauto.service.ZoneLogPage;
 import io.swagger.v3.oas.annotations.ExternalDocumentation;
 import io.swagger.v3.oas.annotations.OpenAPIDefinition;
@@ -11,14 +19,6 @@ import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.ExampleObject;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
-import io.swagger.v3.oas.annotations.tags.Tag;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestParam;
-
-import javax.servlet.http.HttpServletRequest;
 
 //@formatter:off
 @OpenAPIDefinition(
@@ -34,7 +34,6 @@ import javax.servlet.http.HttpServletRequest;
 				url = "https://github.com/th-schwarz/DDAuto"
 		)
 )
-@Tag(name = "main", description = "The main api routes.")
 //@formatter:on
 public interface MainApiRoutes {
 
